--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
 <h1>ПРИВЕТ!</h1>
 <a href="sec.html">ссылка2</a>
 <a href="welcomebar.ru">ссылка2</a>
+
+
+ <iframe src="welcomebar.ru" width="468" height="60" align="left">
+    Ваш браузер не поддерживает плавающие фреймы!
+ </iframe>
+
+
 </body>
 </html>
