--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 <a href="sec.html">ссылка2</a>
 
 
+<a href="welcomebar.ru">ссылка3</a>
 
- <iframe src="welcomebar.ru" width="468" height="60" align="left">
-    Ваш браузер не поддерживает плавающие фреймы!
- </iframe>
 
 
 </body>
