--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title></title>
-	<meta name="description" content=""/>
-	<meta name="keywords" content=""/>
-
-</head>
-<body>
-
-<h1>ПРИВЕТ!</h1>
-<a href="sec.html">ссылка2</a>
-
-
-<a href="welcomebar.ru">ссылка3</a>
-
-
-
-</body>
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8" />
+  <title>HTML5</title>
+  <!--[if IE]>
+   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <style>
+   article, aside, details, figcaption, figure, footer,header,
+   hgroup, menu, nav, section { display: block; }
+  </style>
+ </head>
+ <body>
+  <p>Привет, мир</p>
+ </body>
 </html>
